Databasing (#41)
* fix block generation to eliminate tiny blocks

Driven off block gen timeout now.

* commit transactions

Do'h

* Two sql-state txn types: statement and batch.

Consortium leaves txn batching to passed txn implementation

* All tables have a new column _BLOCK_HEIGHT_

Modify the H2 parser to inject this new column into create table,
insert, update, merge.

Session modified to define the __BLOCK_HEIGHT_ value to be
inserted/updated.

* Pass relevant info to txn exector

* Set blockheight on session

* Fix txn processing in nodes which did not submit txn - d'oh.

Fix parser to use column from table so updates/inserts/etc get processed
correctly.

* Processing

* synchronize block processing through FSM

Rudimentary prep for checkpointing

* interim checkpoint

lol  heh

* uniform

* Add new BLOCKSCRIPT command for creating snapshots at given block height

* first pass at checkpointing logic in consortium

* fix ava test.  fix checkpoint block prev to point to correct block.

At least system detected this as a protocol violation.

* checkpointing for sql-state

woo hoo!  this effin' rocks.

* rename

* fix naming

* Use MVStore for block storage in consortium

* fix checkpoint temp file in state

* finish deflation.

d'oh

* Interim.

Work on replication gossip for Checkpoint blocks/segments

* impl

* reorg for clarity

* moar reorg

* reorg

* genesis view id, genesis data as Any

Prep for next stage

* Use initial genesis data to seed state

Sql State uses this to establish initial schema, data, stored procs,
functions, users, etc.

* refactoring store to include certifications of blocks

* parameterize

geebus, what a lot o params.  Almost like you need a DB to keep track of
'em.  lol ;)

* flush() to synch()

* Store checkpoints in MVStore

* work on checkpoint assembler

work on recovery of view/checkpoint

clean up block header, add hashes for a