@@ -34,7 +34,6 @@
 		<jooq.version>3.13.2</jooq.version>
 		<bc.version>1.65.01</bc.version>
 		<logback.version>1.2.3</logback.version>
-		<calcite.version>1.24.0</calcite.version>
 		<asm.version>8.0.1</asm.version>
 		<antlr.version>4.8-1</antlr.version>
 		<grpc.version>1.32.1</grpc.version>
@@ -194,14 +193,19 @@
 				<version>3.6.1</version>
 			</dependency>
 			<dependency>
-				<groupId>org.mapdb</groupId>
-				<artifactId>mapdb</artifactId>
-				<version>3.0.8</version>
-			</dependency>
-			<dependency>
 				<groupId>javax.xml.bind</groupId>
 				<artifactId>jaxb-api</artifactId>
 				<version>2.3.1</version>
+			</dependency>
+			<dependency>
+				<groupId>com.h2database</groupId>
+				<artifactId>h2</artifactId>
+				<version>${h2.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.h2database</groupId>
+				<artifactId>h2-mvstore</artifactId>
+				<version>${h2.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.jooq</groupId>
@@ -237,27 +241,6 @@
 				<groupId>commons-codec</groupId>
 				<artifactId>commons-codec</artifactId>
 				<version>1.15</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.calcite</groupId>
-				<artifactId>calcite-core</artifactId>
-				<version>${calcite.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.calcite</groupId>
-				<artifactId>calcite-server</artifactId>
-				<version>${calcite.version}</version>
-				<exclusions>
-					<exclusion>
-						<groupId>commons-logging</groupId>
-						<artifactId>commons-logging</artifactId>
-					</exclusion>
-				</exclusions>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.calcite</groupId>
-				<artifactId>calcite-babel</artifactId>
-				<version>${calcite.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.commons</groupId>
@@ -297,8 +280,8 @@
 			</dependency>
 			<dependency>
 				<groupId>guru.nidi</groupId>
-				<artifactId>graphviz-java</artifactId>
-				<version>0.16.3</version>
+				<artifactId>graphviz-java-all-j2v8</artifactId>
+				<version>0.18.0</version>
 			</dependency>
 			<dependency>
 				<groupId>org.hamcrest</groupId>
@@ -349,8 +332,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
 					<forkCount>1</forkCount>
-					<reuseForks>true</reuseForks>
-					<argLine>-Xms2048m -Xmx2048m -XX:MaxDirectMemorySize=10G</argLine>
+					<reuseForks>false</reuseForks>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -456,11 +438,6 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>3.0.0-M5</version>
-					<configuration>
-						<argLine>
-							--illegal-access=permit
-						</argLine>
-					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
